[package]
name = "app"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.9.0"
anyhow = "1.0.31"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.67"

[target.'cfg(unix)'.dependencies]
reqwest = { version = "0.10.7", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }

[profile.release]
debug = true
