[package]
name = "interpreter"
version = "0.1.0"
authors = ["Keigo Oka <ogiekako@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
anyhow = "1.0.31"
lazy_static = "1.4.0"
im-rc = "15.0.0"