[package]
name = "interpreter"
version = "0.1.0"
authors = ["Keigo Oka <ogiekako@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
itertools = "0.9.0"
anyhow = "1.0.31"
lazy_static = "1.4.0"
typed-arena = "2.0.1"

wasm-bindgen = {version="0.2.65", features = ["serde-serialize"]}
console_error_panic_hook = { version = "0.1.6", optional = true }

serde = {version="1.0.114", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
reqwest = { version = "0.10.7", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }

[profile.release]
debug = true
